# champ

./: README.md
champ_config/launch/: gazebo.launch.py
champ_description/urdf/: champ.urdf  champ.urdf.xacro
champ_gazebo/: CMakeLists.txt  package.xml
champ_gazebo/src/: contact_sensor.cpp
